# raijit

./: .dockerignore  .gitignore  README.md
.github/workflows/: build_and_test.yml
app_tests/: nbody_test.py
ci/: ubuntu-Dockerfile
opcode_tests/: add.py  binary.py  compare.py  copy.py  fib.py  for.py  hello.py  identity.py  inplace.py  load_const.py  load_global.py  load_method.py  map.py  misc.py  opcodes.py  subscr.py  unary.py  use_if.py
scripts/: build_and_install_cpython.sh  list_up_unimplmented_ops.sh  run_app_tests.sh  run_ci_local.sh  run_opcode_tests.sh  update_cpython_zip.sh
src/: CMakeLists.txt  disasm.cc  disasm.h  log.h  opcode_table.cc  opcode_table.h  raijit.cc  write_insts.cc  write_insts.h
users/akawashiro/: README.md  raytrace.py  raytrace.sh  run.sh  show_opcodes.py  use_jit.py
